<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactUsFragment">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:contentDescription="@string/todo"
        android:paddingBottom="@dimen/_180sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/layer_2_copy_5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logooat"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/layer_2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/abooutuss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibrib"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/aboutus"
        android:textColor="@color/light_orange"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/phoneabt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/calibrib"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/phone"
        android:textColor="@color/light_orange"
        android:textIsSelectable="true"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abooutuss" />

    <TextView
        android:id="@+id/emailabt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/calibrib"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/email"
        android:textColor="@color/light_orange"
        android:textIsSelectable="true"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneabt" />

    <TextView
        android:id="@+id/linkedabt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/calibrib"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/linkedin"
        android:textColor="@color/light_orange"
        android:textIsSelectable="true"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailabt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/calibrib"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/github"
        android:textColor="@color/light_orange"
        android:textIsSelectable="true"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkedabt" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:contentDescription="@string/todo"
        android:src="@drawable/shopping_cart_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-27dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

