<?xml version="1.0"  encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sign_in_background_suhi" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/calibrib"

            android:lineSpacingExtra="-11sp"
            android:text="@string/sign_in"
            android:textColor="#322e2b"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:autofillHints="@string/username"
            android:importantForAutofill="auto"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/_13sdp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


<!--        <EditText-->
<!--            android:id="@+id/password_login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_40sdp"-->
<!--            android:layout_marginStart="@dimen/_30sdp"-->
<!--            android:layout_marginTop="@dimen/_16sdp"-->
<!--            android:layout_marginEnd="@dimen/_40sdp"-->
<!--            android:autofillHints="@string/password"-->
<!--            android:importantForAutofill="auto"-->
<!--            android:drawableStart="@drawable/user"-->
<!--            android:drawablePadding="@dimen/_13sdp"-->
<!--            android:hint="@string/username"-->
<!--            android:inputType="textPassword"-->
<!--            android:paddingStart="@dimen/_10sdp"-->
<!--            android:paddingEnd="@dimen/_10sdp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/username_login" />-->



        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:drawableStart="@drawable/password"
            android:autofillHints="@string/password"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:importantForAutofill="auto"
            android:drawablePadding="@dimen/_13sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_login"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:onClick="ForgetPassword"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LoginNow"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:background="@drawable/soldbutton"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/signin_button"
            app:layout_constraintStart_toStartOf="@+id/signin_button"
            app:layout_constraintTop_toBottomOf="@+id/signin_button">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@color/light_orange"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/light_orange"
                android:textSize="@dimen/_8sdp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@color/light_orange"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/google"
            android:onClick="LoginGoogle"
            app:layout_constraintStart_toStartOf="@+id/signin_button"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:contentDescription="@string/todo" />



        <androidx.cardview.widget.CardView
            android:id="@+id/imageView4"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:foreground="@drawable/facebook"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/signin_button"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            >
            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_sign_in"
                android:layout_width="@dimen/_90sdp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>



<!--        <ImageView-->
<!--            android:id="@+id/imageView4"-->
<!--            android:layout_width="@dimen/_100sdp"-->
<!--            android:layout_height="@dimen/_50sdp"-->
<!--            android:src="@drawable/facebook"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/signin_button"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
<!--            android:contentDescription="@string/todo" />-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textStyle="bold"
                android:text="@string/register_q"
                android:onClick="GoToRegister"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>